# raytracer

./: .gitignore  AreaLight.cpp  AreaLight.h  AshikhminMaterial.cpp  AshikhminMaterial.h  AssimpLoader.cpp  AssimpLoader.h  BoundingBox.cpp  BoundingBox.h  Box.h  BoxTreeNode.h  CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  Console.cpp  Console.h  CustomMesh.cpp  DielectricMaterial.h  ImageTexture.cpp  ImageTexture.h  Instance.cpp  Instance.h  LambertMaterial.cpp  LambertMaterial.h  Light.cpp  Light.h  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MetalMaterial.h  Node.h  ParallelogramLight.cpp  PlasticMaterial.cpp  (+25 more)
CMakeModules/: FindAssimp.cmake
Forms/: MainWindow.ui
Presentation/: blog.html
Resources/Scene/CornellBox/: CornellBox-Sphere.mtl
Resources/Scene/Models/CornellBox/: CornellBox-Sphere.mtl
Resources/Scene/Models/Ring/: scene.dae
Sources/: AreaLight.cpp  AreaLight.h  AshikhminMaterial.cpp  AshikhminMaterial.h  AssimpLoader.cpp  AssimpLoader.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  BoxTreeNode.cpp  BoxTreeNode.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Config.cpp  Config.h  Console.cpp  CustomMaterial.cpp  CustomMaterial.h  CustomMesh.h  DielectricMaterial.cpp  DielectricMaterial.h  DirectionalLight.cpp  DirectionalLight.h  ImageTexture.cpp  ImageTexture.h  Instance.cpp  Instance.h  Integrator.cpp  Integrator.h  Intersection.cpp  Intersection.h  KDTreeNode.cpp  KDTreeNode.h  LambertMaterial.cpp  LambertMaterial.h  Light.cpp  Light.h  Logger.cpp  (+50 more)
